2011-10-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexenc.c, ptexenc/ptexenc.h: Declare and export Poptr.

2011-09-05  Takuji Tanaka <KXD02663@nifty.ne.jp>

	* ptexenc.c: Fix putc2() to output right unicode characters.

2011-08-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* unicode.c (UTF8length, UCStoUPTEX, UPTEXtoUCS),
	* unicode-jp.c (variation, JIStoUCS2): Patches from
	Takuji Tanaka <KXD02663@nifty.ne.jp>, mail [ptex:00300].

	* unicode-jp.c: #include <ptexenc/ptexenc.h> for
	is_internalUPTEX().  From Takuji Tanaka [ptex:00302].

2011-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	More support for upTeX and e-upTeX.  Updates from W32TeX.
	* ptexenc.c, ptexenc/ptexenc.h: Add is_internalEUC(),
	is_internalUPTEX(), ismultichr(), ismultichr(), toDVI(), and
	fromDVI().
	No nkf_disable(), nkf_open(), and nkf_close() for WIN32.

	* ptexenc/unicode.h, unicode.c: Add UCStoUPTEX(), UPTEXtoUCS().

	* ptexenc/kanjicnv.h, ptexenc/ptexenc.h, ptexenc/unicode.h:
	Use prototypes as in ptexenc/ from W32TeX.

	* ptexenc.c: Handle default encoding with/without uptex.
	* configure.ac: Remove option '--with-ptexenc-enc' configure.

2011-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 1.2.0 => 1.3.0dev.
	* ptexenc.c, ptexenc/ptexenc.h: Add sjisterminal,
	infile_enc_auto, and enable_UPTEX().

	Renamed ChangeLog => ChangeLog.jp, ChangeLog.TL => ChangeLog.
	* Makefile.am (EXTRA_DIST): Adapted.

2011-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Add support for upTeX and e-upTeX.
	* ptexenc/ptexenc.h, ptexenc.c: Export fromUCS().

2011-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: New file defining the ptexenc version.
	* configure.ac: Adapt. Use KPSE_LT_VERSION.

2011-01-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	For e-pTeX, adapted from eptex-110102.tar.xz by Hironori Kitagawa.
	* ptexenc.c, ptexenc/ptexenc.h: Export toUCS().
	* ptexenc/unicode.h: Export UCStoUTF8().