@@ -35,12 +35,13 @@ extern integer calc_pos (integer c);
 extern integer kcatcodekey (integer c);
 extern integer multilenbuffchar (integer c);
 
-extern void init_kanji (const_string file_str, const_string internal_str);
 extern void init_default_kanji (const_string file_str, const_string internal_str);
 /* for upTeX and e-upTeX */
 #define initdefaultkanji() init_default_kanji("utf8", "uptex")
 /* for upBibTeX, upDVItype, upPLtoTF, and upTFtoPL */
 #define initkanji() init_default_kanji("utf8", "uptex")
+/* for upDVItype */
+#define setpriorfileenc() set_prior_file_enc()
 
 /* number of rest of multi-char for kcode_pos */
 #define nrestmultichr(x)  ( (x)!=0 ? ((x) / 8) + 2 - ((x) % 8) : -1 )
